# MRMW-Atomic-Register

./: .gitignore
solution/: Cargo.toml
solution/src/: atomic_register.rs  communication.rs  lib.rs  register_client.rs  sectors.rs  stable_storage.rs
